samples/_failures_safe/1761692666_fbc5d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71a32542.c: In function ‘main’:
./samples/SAFE/__tmp_71a32542.c:159:45: error: expected ‘)’ at end of input
  159 |                 if (multiply_matrices(&a, &b
      |                                      ~      ^
      |                                             )
./samples/SAFE/__tmp_71a32542.c:159:21: error: too few arguments to function ‘multiply_matrices’
  159 |                 if (multiply_matrices(&a, &b
      |                     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_71a32542.c:70:5: note: declared here
   70 | int multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_71a32542.c:159:17: error: expected declaration or statement at end of input
  159 |                 if (multiply_matrices(&a, &b
      |                 ^~
./samples/SAFE/__tmp_71a32542.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_71a32542.c:159:17: error: expected declaration or statement at end of input
